fix contact spacing

--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,13 @@
 .logo.nav {
   width: 15rem;
 }
+
 .logo.footer {
   width: 15rem;
   padding-top: 0;
   padding-bottom: 2rem;
 }
+
 /* ////////////////////////////////////// */
 /* ? Navigation Section */
 /* ////////////////////////////////////// */
@@ -315,7 +317,7 @@
 
 .contact-us {
   background-color: #f2d3d5;
-  padding: 9.6rem 35rem;
+  padding: 9.6rem 25rem;
 }
 
 .contact-container {
